# github-big-proj21

./: .gitignore  CONTRIBUTING.md  README.md  README_EN.md  pyproject.toml  requirements.txt
.pytest_cache/v/cache/: nodeids
docs/: 5W1H_ARCHITECTURE.md
examples/: usage.py
skills_builtin/: change_tracker.yaml  code_review.yaml  project_onboarding.yaml  prompt_enhancer.yaml
src/cli/: __init__.py  main.py
src/core/: __init__.py  context_compressor.py  knowledge_graph.py  memory_engine.py  sync_bridge.py
src/storage/: __init__.py  graph_store.py  local_db.py  vector_store.py
tests/: conftest.py  test_core.py
